[tool.poetry]
name = "starstack"
version = "0.1.0"
description = "combine a large number of photos of the night sky, without the need for equatorial tracking equipment"
authors = ["Blake Karwoski"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.0"
numpy = "^1.19.1"
imageio = "^2.9.0"
rawpy = "^0.14.0"
opencv-python = "^4.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
